[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "signal", "rt-multi-thread"] }
serenity = { version = "0.11", features = [
    "cache",
    "framework",
    "standard_framework",
    "rustls_backend",
    "utils",
    "gateway",
] }
anyhow = "1"
tracing-tree = "0.2.5"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
reqwest = "0.11"
xmltree = "0.10"
html-escape = "0.2"
